<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Answer">

    <TextView
        android:id="@+id/Answerbanner"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        android:text="@string/Answerbanner"
        android:textAlignment="center"
        android:textColor="@color/Answerbanner"
        android:textColorLink="@color/teal_700"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/answerdisplay"
        android:layout_width="303dp"
        android:layout_height="68dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="328dp"
        android:drawableStart="@drawable/baseline_question_answer_24"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/answerdisplay"
        android:textColor="@color/answerdisplay"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/answerback"
        android:layout_width="124dp"
        android:layout_height="87dp"
        android:layout_marginStart="132dp"
        android:layout_marginTop="84dp"
        android:backgroundTint="@color/answerback"
        android:text="@string/answerback"
        app:cornerRadius="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answerdisplay" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="214dp"
        android:layout_height="176dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Answerbanner"
        app:srcCompat="@drawable/answernew" />
</androidx.constraintlayout.widget.ConstraintLayout>